2006-03-15  Per Bothner  <per@bothner.com>

	* TreeList.java (getNextTypeIndex): Take extra parameter to indicate
	if we want type-name or type-object.  This is needed to make it work
	for processing-instructions, whihc only have one objects array entry.	

2005-12-30  Per Bothner  <per@bothner.com>

	* Strings.java (printQuoted): Allow any CharSequence, not just
	CharSeq, if java.lang.CharSequence is available - e.g. JDK 1.4 or later.

2005-12-18  Per Bothner  <per@bothner.com>

	* GapVector.java: Add protected no-arg constructor, for serialization.
	* StableVector.java: Likewise.
	* CharBuffer.java: Likewise.  Also implement java.io.Serializable.

	* StableVector.java (remove): Fix buggy position adjustment.

	* CharBuffer.java (dump): Suppress printing unused positions.

2005-12-11  Per Bothner  <per@bothner.com>

	* GapVector.java (getSegment): New method, based on old getChars
	method in gnu.jemacs.swing.BufferContent.
	(removePosRange): Fix thinko in calculating where to shiftGap.
	* StableVector.java (chainFreelist): Fix two thinkos.
	(removePosRange): We have to unchainFreelist before we can
	loop over the positions.
	* CharBuffer.java (toString): Use new getSegment method.
	(dump): Moved from gnu.jemacs.swing.BufferContent.

2005-12-05  Per Bothner  <per@bothner.com>

	* AbstractFormat.java (beginGroup): Emit a space after the typename.
	(beginAttribute): Don't need an initial space.

2005-12-03  Per Bothner  <per@bothner.com>

	* AbstractSequence.java (consumePosRange): Add missing nextPos call.
	Ooops.
	* GeneralArray1.java (createPos, nextPos): Need to define these,
	since the ones in AbstractSequence are mutually dependent, and it
	matters since GeneralArray1 but not GeneralArray implements Sequence.
	(consumePosRange): Optimization.

2005-11-29  Per Bothner  <per@bothner.com>

	* LList.java (consX): New method.

2005-11-14  thomas kirk  <tk@research.att.com>

	* AbstractFormat.java (format): Close OutPort.

2005-11-03  Per Bothner  <per@bothner.com>
